# react-native-keep-awake

./: KeepAwake.podspec  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/keepawake/: KeepAwakeModule.kt  KeepAwakePackage.kt
cpp/: react-native-keep-awake.cpp  react-native-keep-awake.h
example/: package.json
example/ios/: Podfile
example/ios/KeepAwakeExample/: AppDelegate.swift
example/src/: App.tsx
ios/: KeepAwake.h  KeepAwake.mm
src/: index.tsx
